[package]
name = "libyang"
version = "1.0.0"
description = "YANG parser in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zebra-rs/libyang"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.rs>"]
readme = "README.md"
keywords = ["yang", "parser", "networking", "ietf"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/libyang"
exclude = ["/.github/*"]

[dependencies]
anyhow = "1"
env_logger = "0.11"
parol_runtime = "3"
thiserror = "2"

[build-dependencies]
parol = "3"
parol_runtime = "3"

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
