[package]
name = "libyang"
version = "2.0.0"
description = "YANG parser in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zebra-rs/libyang"
edition = "2024"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.rs>"]
readme = "README.md"
keywords = ["yang", "parser", "networking", "ietf"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/libyang"
exclude = ["/.github/*"]

[dependencies]
anyhow = "1"
env_logger = "0.11"
parol_runtime = "4"
scnr2 = "0.5"
thiserror = "2"

[build-dependencies]
parol = "4"
parol_runtime = "4"

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
